--- a/Historie-md-html/2010.ipynb
+++ b/Historie-md-html/2010.ipynb
@@ -1,5 +1,11 @@
-<style>
-ol.alpha {
+{
+  "cells":[
+  {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+    "<style>",
+"ol.alpha {
   counter-reset: list;
 }
 ol.alpha > li {
@@ -42,7 +48,7 @@ Im Verständnis und im Bewusstsein, dass diese Statuten die rechtliche Verkörpe
 
 ## § 1 Name, Sitz und Tätigkeitsbereich
 
-(1) Der Verein führt den Namen "FC Wacker Innsbruck".
+(1) Der Verein führt den Namen 'FC Wacker Innsbruck'.
 
 (2) Er hat seinen Sitz in Innsbruck und erstreckt seine Tätigkeit auf das gesamte Gebiet der Europäischen Union (EU).
 Die Sportausübung ist auch außerhalb der EU möglich.
@@ -51,7 +57,7 @@ Die Sportausübung ist auch außerhalb der EU möglich.
 
 ## § 2 Vereinsfarben und Vereinswappen
 
-(1) Die Vereinsfarben sind "Schwarz-Grün".
+(1) Die Vereinsfarben sind 'Schwarz-Grün'.
 
 (2) Das Vereinswappen visualisiert den Ursprung, die Identität und die Zukunft des FC Wacker Innsbruck.
 Das Ursprungswappen ist eingebettet in das schwarz-grüne Selbstverständnis und mit dem goldenen Band des Sieges umrahmt.
@@ -76,7 +82,7 @@ Auch die sportliche Ausbildung und Weiterbildung der Mitglieder ist Ziel des Ver
 
 (2) Als ideelle Mittel dienen
 
-<ol class="alpha">
+<ol class='alpha'>
 <li>Maßnahmen zur Umsetzung des Markengrundbuchs (Version 2009 idgF.)</li>
 <li>sportliche und gesellige Veranstaltungen</li>
 <li>Vereinsabende und sonstige Maßnahmen der Mitglieder- und Fanbetreuung</li>
@@ -108,7 +114,7 @@ Die Einnahmen dürfen nur im Sinne des Vereinszweckes verwendet werden.
 
 ## § 5 Arten der Mitgliedschaft
 
-(1) Der demokratische Mitgliederverein "FC Wacker Innsbruck" gliedert sich in
+(1) Der demokratische Mitgliederverein 'FC Wacker Innsbruck' gliedert sich in
 
 a) ordentliche Mitglieder  
 b) fördernde Mitglieder  
@@ -166,7 +172,7 @@ Diese werden von der Generalversammlung festgesetzt und sind im Vorhinein zu ent
 Sie haben die Statuten und ihre Durchführungsbestimmungen sowie die Beschlüsse der Vereinsorgane genau zu beachten.
 
 (4) Die Mitglieder verpflichten sich jeglichem rassistischen Verhalten im Stadion und im Klub entschieden entgegenzutreten, sowie zur Förderung von ethnischen Minderheiten und Migranten im Verein und zur Zusammenarbeit mit allen Organisationen, welche dem Problem des Rassismus im Fußball entgegenwirken.
-Insbesondere Aktivitäten im Rahmen des Netzwerkes „FARE - Football Against Racism in Europe" und der österreichischen Kampagne „FairPlay - Viele Farben. Ein Spiel" sollen unterstützt werden.
+Insbesondere Aktivitäten im Rahmen des Netzwerkes 'FARE - Football Against Racism in Europe' und der österreichischen Kampagne „FairPlay - Viele Farben. Ein Spiel" sollen unterstützt werden.
 Außerdem anerkennen die Mitglieder die Grundsätze des Zehn Punkte Plans der UEFA zur Bekämpfung des Rassismus im Fußball.
 
 ---
@@ -388,7 +394,7 @@ Die Entscheidungen sind vereinsintern endgültig.
 
 ## § 19 Demokratieverständnis
 
-(1) Organisation und Arbeitsweise des Mitgliedervereins "FC Wacker Innsbruck" beruhen auf dem Grundsatz der repräsentativen Demokratie.
+(1) Organisation und Arbeitsweise des Mitgliedervereins 'FC Wacker Innsbruck' beruhen auf dem Grundsatz der repräsentativen Demokratie.
 Die gemeinschaftliche Willensbildung gründet auf der Selbstbestimmung seiner Mitglieder und verfolgt das Ziel der Selbstbestimmtheit des Vereins.
 
 (2) Der Verein achtet in seinem gesamten Handeln den Grundsatz der Gleichheit seiner Mitglieder.
@@ -460,3 +466,8 @@ Um Verständlichkeit und Lesbarkeit der vorliegenden Statuten zu gewährleisten,
 Insbesondere hat sie einen Abwickler zu berufen und Beschluss darüber zu fassen, wem dieser das nach Abdeckung der Passiven verbleibende Vermögen zu übertragen hat.
 
 (3) Bei Auflösung des Vereins oder bei Wegfall des bisherigen begünstigten Vereinszwecks darf das allenfalls vorhandene Vereinsvermögen in keiner wie immer gearteten Form den Vereinsmitgliedern zugute kommen, sondern ist für sportliche gemeinnützige Zwecke im Sinne der §§ 34ff BAO zu verwenden.
+    "
+    ]
+  }
+  ]
+}
